# PUKOSTUDIO-UGC

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf
backend/: .gitignore  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 136a65e6f5f9_add_clients_table.py  2320bf5cffcb_add_client_conversations_and_client_.py  2f5c3e0b9a21_add_ai_communication_tables.py  4c91a7d2e6b3_add_sop_fields_to_ai_playbooks.py  5641dfa5cbe1_add_email_suppressions.py  59b71e8767a5_sanitize_existing_template_body_html.py  59d9217f6c8c_add_signature_mode_to_email_accounts.py  63ad4dbc6fd4_add_client_campaigns_and_client_email_.py  7e1c9a4b2d3f_add_email_dig_jobs.py  8fb4dd2e5a99_initial_schema.py  9d2a4e1f7b6c_add_woto_sync.py  a1c6e5d4b3f2_add_attachment_ids_to_campaign_steps.py  a3f7e2c1d8b5_add_woto_settings_to_teams.py  b2e9f4c7d1a3_add_ai_settings_to_teams.py  b7f3d2c1a9e0_add_attachment_ids_to_client_campaign_steps.py  c4d8a1f9e2b7_add_email_attachments.py  d5e9b3a2c1f8_add_signature_to_email_accounts.py  e7b4a2c9d6f1_add_language_and_library_to_templates.py  f18b3c4d5e6a_add_woto_pricing.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: database.py  exceptions.py  html_sanitize.py  import_mapping.py  pagination.py  security.py  tabular.py  utils.py
backend/app/models/: __init__.py  ai.py  base.py  campaign.py  client.py  client_campaign.py  client_conversation.py  client_email_message.py  user.py  (+9 more)
backend/scripts/: seed_influencers.py  seed_library_templates.py
(+153 files in other folders)
