[project]
name = "ugc-outreach"
version = "0.1.0"
description = "AI-powered US influencer bulk outreach system"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # Auth
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Task queue
    "celery[redis]>=5.4.0",
    # HTTP client
    "httpx>=0.27.0",
    # Email providers
    "boto3>=1.34.0",
    "sendgrid>=6.11.0",
    "aiosmtplib>=3.0.0",
    # AI providers
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    # Data processing
    "openpyxl>=3.1.0",
    "python-dateutil>=2.9.0",
    # Utils
    "pydantic[email]>=2.8.0",
    # Scraping
    "playwright>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic", "ugc_outreach.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
